--- a/index.html
+++ b/index.html
@@ -73,7 +73,41 @@
         </div>
     </section>
     <section>
-        Running locations, distances and time
+        <div>
+            <h2>Urban</h2>
+            <h3>Monday</h3>
+            <h3>5K</h3>
+            <h3>Minka coffee shop</h3>
+            <h3>08:00</h3>
+        </div>
+        <div>
+            <h2>Trail</h2>
+            <h3>Wednesday</h3>
+            <h3>10K</h3>
+            <h3>Haywards Heath park</h3>
+            <h3>18:00</h3>
+        </div>
+        <div>
+            <h2>Urban</h2>
+            <h3>Friday</h3>
+            <h3>2K</h3>
+            <h3>Minka coffee shop</h3>
+            <h3>10:00</h3>
+        </div>
+        <div>
+            <h2>Trail</h2>
+            <h3>Tuseday</h3>
+            <h3>5K</h3>
+            <h3>Whitemans green park</h3>
+            <h3>14:00</h3>
+        </div>
+        <div>
+            <h2>Coffee</h2>
+            <h3>Sunday</h3>
+            <h3>0K</h3>
+            <h3>Minka coffee shop</h3>
+            <h3>11:30</h3>
+        </div>
     </section>
     <footer>
         social media links
