--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,19 @@
             </ul>
         </nav>
     </header>
-    
+
+    <section id="photos">
+        <img src="assets/images/athletes.jpg" alt="Two athletes running together">
+        <img src="assets/images/girls.jpg" alt="Three girls at a charity paint running festival">
+        <img src="assets/images/runner3.jpg" alt="Solo male runner jogging on the beach">
+        <img src="assets/images/man.jpg" alt="Man at charity paint running festival">
+        <img src="assets/images/runner1.jpg" alt="Solo female runner jogging through pheonix park">
+        <img src="assets/images/runner2.jpg" alt="Runners competing in a marathon">
+        <img src="assets/images/runner4.jpg" alt="Slow female runner jogging on a beach">
+        <img src="assets/images/running_gang.jpg" alt="Large group of runners taking part in a marathon on a rainy day">
+        <img src="assets/images/mud-run.jpg" alt="Two women taking a muddy selfie after the Mud Runners Championships">
+    </section>
+
     <footer>
         <ul class="social-networks">
             <li>
